--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
         <title>website dambord Nick Vergoossen</title>
     </head>
     <body>
-        <ul class="nav justify-content-center">
+        <ul class="nav nav-pills">
             <li class="nav-item">
               <a class="nav-link active" aria-current="page" href="#">Active</a>
             </li>
