--- a/index.html
+++ b/index.html
@@ -10,5 +10,24 @@
             <li class="nav-item">
               <a href="index.html">home</a>
           </ul>
+          <style>
+              .navbar{
+                  background-color:black;
+                  font-size: 18px;
+                  padding: 14px 16px;
+              }
+              li {
+            display:inline;
+            margin-left:20px;
+              }
+              a{
+                  color: white;
+                  text-decoration:none;
+              }
+              a.hover{
+                  color:gray;
+              }
+              
+          </style>
     </body>
 </html>
