--- a/programma's.html
+++ b/programma's.html
@@ -34,7 +34,7 @@
                     </ul>
                   </li>
                   <li class="nav-item">
-                    <a class="nav-link disabled" href="#" tabindex="-1" aria-disabled="true">Disabled</a>
+                    <a class="nav-link" href="blog.html">blog</a>
                   </li>
                 </ul>
                 <form class="d-flex">
