--- a/blog.html
+++ b/blog.html
@@ -20,7 +20,7 @@
                     <a class="nav-link" aria-current="page" href="index.html">Home</a>
                   </li>
                   <li class="nav-item">
-                    <a class="nav-link active" href="programma's.html">Programma's</a>
+                    <a class="nav-link" href="programma's.html">Programma's</a>
                   </li>
                   <li class="nav-item dropdown">
                     <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
