--- a/index.html
+++ b/index.html
@@ -48,5 +48,21 @@
               </div>
             </div>
           </nav>
+          <div id="carouselExampleSlidesOnly" class="carousel slide" data-bs-ride="carousel">
+            <div class="carousel-inner">
+              <div class="carousel-item active">
+                <img src="bord_kader.jpg" class="d-block w-100" alt="...">
+              </div>
+              <div class="carousel-item">
+                <img src="onderdelen.jpg" class="d-block w-100" alt="...">
+              </div>
+              <div class="carousel-item">
+                <img src="test_dambord.jpg" class="d-block w-100" alt="...">
+                <div class="carousel-item">
+                  <img scr="dambord_blue.jpg" class="d-block w_100" alt="...">
+                </div>
+              </div>
+            </div>
+          </div>
     </body>
 </html>
