--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
           </nav>
           <div id="carouselExampleSlidesOnly" class="carousel slide" data-bs-ride="carousel">
             <div class="carousel-inner">
-              <div class="carousel-item active">
+              <div class="carousel-item">
                 <img src="bord_kader.jpg" class="d-block w-100" alt="...">
               </div>
               <div class="carousel-item">
