--- a/index.html
+++ b/index.html
@@ -48,21 +48,43 @@
               </div>
             </div>
           </nav>
-          <div id="carouselExampleSlidesOnly" class="carousel slide" data-bs-ride="carousel">
+          <div id="carouselExampleCaptions" class="carousel slide" data-bs-ride="carousel">
+            <div class="carousel-indicators">
+              <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
+              <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="1" aria-label="Slide 2"></button>
+              <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="2" aria-label="Slide 3"></button>
+            </div>
             <div class="carousel-inner">
-              <div class="carousel-item">
-                <img src="bord_kader.jpg" class="d-block w-100" alt="...">
-              </div>
-              <div class="carousel-item">
-                <img src="onderdelen.jpg" class="d-block w-100" alt="...">
+              <div class="carousel-item active">
+                <img src="dambord_blue.jpg" class="d-block w-100" alt="...">
+                <div class="carousel-caption d-none d-md-block">
+                  <h5>dambord blauw</h5>
+                  <p>test voor het hele bord met de kleur blauw</p>
+                </div>
               </div>
               <div class="carousel-item">
                 <img src="test_dambord.jpg" class="d-block w-100" alt="...">
-                <div class="carousel-item">
-                  <img scr="dambord_blue.jpg" class="d-block w_100" alt="...">
+                <div class="carousel-caption d-none d-md-block">
+                  <h5>dambord show board</h5>
+                  <p>test voor het laten zien van het bord.</p>
+                </div>
+              </div>
+              <div class="carousel-item">
+                <img src="onderdelen.jpg" class="d-block w-100" alt="...">
+                <div class="carousel-caption d-none d-md-block">
+                  <h5>onderdelen van dambord</h5>
+                  <p>dit zijn de componenten van het dambord.</p>
                 </div>
               </div>
             </div>
+            <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide="prev">
+              <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+              <span class="visually-hidden">Previous</span>
+            </button>
+            <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide="next">
+              <span class="carousel-control-next-icon" aria-hidden="true"></span>
+              <span class="visually-hidden">Next</span>
+            </button>
           </div>
     </body>
 </html>
