--- a/index.html
+++ b/index.html
@@ -6,14 +6,15 @@
 
       <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
 
-      <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
+      <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
         <meta charset="utf-8">
         <meta name="vieuwport" content="width=device-width, initial-scale=1">
         <title>website dambord Nick Vergoossen</title>
     </head>
+
     <body style="background-color:black">
+      <div class="container-fluid">
         <nav class="navbar navbar-expand-lg navbar-light bg-light">
-            <div class="container-fluid">
               <a class="navbar-brand" href="#">Navbar</a>
               <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
@@ -46,45 +47,61 @@
                   <button class="btn btn-outline-success" type="submit">Search</button>
                 </form>
               </div>
-            </div>
           </nav>
-          <div id="carouselExampleCaptions" class="carousel slide" data-bs-ride="carousel">
-            <div class="carousel-indicators">
-              <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
-              <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="1" aria-label="Slide 2"></button>
-              <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="2" aria-label="Slide 3"></button>
-            </div>
-            <div class="carousel-inner">
-              <div class="carousel-item active">
-                <img src="dambord_blue.jpg" class="d-block w-100" alt="...">
-                <div class="carousel-caption d-none d-md-block">
-                  <h5>dambord blauw</h5>
-                  <p>test voor het hele bord met de kleur blauw</p>
-                </div>
-              </div>
-              <div class="carousel-item">
-                <img src="test_dambord.jpg" class="d-block w-100" alt="...">
-                <div class="carousel-caption d-none d-md-block">
-                  <h5>dambord show board</h5>
-                  <p>test voor het laten zien van het bord.</p>
-                </div>
-              </div>
-              <div class="carousel-item">
-                <img src="onderdelen.jpg" class="d-block w-100" alt="...">
-                <div class="carousel-caption d-none d-md-block">
-                  <h5>onderdelen van dambord</h5>
-                  <p>dit zijn de componenten van het dambord.</p>
-                </div>
-              </div>
-            </div>
-            <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide="prev">
-              <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-              <span class="visually-hidden">Previous</span>
-            </button>
-            <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide="next">
-              <span class="carousel-control-next-icon" aria-hidden="true"></span>
-              <span class="visually-hidden">Next</span>
-            </button>
           </div>
+<br>
+<br>
+<div class="container">
+  <div class="card" style="width: 18rem;">
+    <div class="card-body">
+      <h5 class="card-title">Welkom op mijn website</h5>
+      <h6 class="card-subtitle mb-2 text-muted">Gemaakt door Nick Vergoossen, 6IICT</h6>
+      <p class="card-text">Op deze website kunt u meer informatie vinden over mijn gip(het elektronisch dambord). De bedoeling van mijn gip is om een dambord te maken waarbij de spelers lechten gebruiken als damstukken in plaats van echte fysieke stenen.  </p>
+    </div>
+  </div>
+</div>
+<br>
+<br>
+
+<div class="container" >
+  <div id="carouselExampleCaptions" class="carousel slide" data-bs-ride="carousel" style="max-height: 600px;">
+    <div class="carousel-indicators">
+      <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
+      <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="1" aria-label="Slide 2"></button>
+      <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="2" aria-label="Slide 3"></button>
+    </div>
+    <div class="carousel-inner.item">
+      <div class="carousel-item active">
+        <img src="dambord_blue.jpg" class="d-block w-100" style="height: 600px; max-width:600px; margin:auto" alt="...">
+        <div class="carousel-caption d-none d-md-block">
+          <h5>blauw dambord</h5>
+          <p>test programma of alle leds werken.</p>
+        </div>
+      </div>
+      <div class="carousel-item">
+        <img src="test_dambord.jpg" class="d-block w-100" style="height: 600px; max-width:600px; margin:auto" alt="...">
+        <div class="carousel-caption d-none d-md-block">
+          <h5>test showboard</h5>
+          <p>test voor het laten zien van het bord.</p>
+        </div>
+      </div>
+      <div class="carousel-item">
+        <img src="onderdelen.jpg" class="d-block w-100" style="height: 600px; max-width:600px; margin:auto" alt="...">
+        <div class="carousel-caption d-none d-md-block">
+          <h5>onderdelen project</h5>
+          <p>een aantal componenten gebruikt bij het project.</p>
+        </div>
+      </div>
+    </div>
+    <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide="prev" style = "height:450px; max-width:300px;">
+      <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+      <span class="visually-hidden">Previous</span>
+    </button>
+    <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide="next" style="height: 450px; max-width:300px;">
+      <span class="carousel-control-next-icon" aria-hidden="true"></span>
+      <span class="visually-hidden">Next</span>
+    </button>
+  </div>
+          
     </body>
 </html>
