--- a/index.html
+++ b/index.html
@@ -52,11 +52,22 @@
 <br>
 <br>
 <div class="container">
-  <div class="card" style="width: 18rem;">
-    <div class="card-body">
-      <h5 class="card-title">Welkom op mijn website</h5>
-      <h6 class="card-subtitle mb-2 text-muted">Gemaakt door Nick Vergoossen, 6IICT</h6>
-      <p class="card-text">Op deze website kunt u meer informatie vinden over mijn gip(het elektronisch dambord). De bedoeling van mijn gip is om een dambord te maken waarbij de spelers lechten gebruiken als damstukken in plaats van echte fysieke stenen.  </p>
+<div class="row">
+  <div class="col-sm-6">
+    <div class="card">
+      <div class="card-body">
+        <h5 class="card-title">Welkom op mijn website</h5>
+        <h6 class="card-subtitle mb-2 text-muted">Gemaakt door Nick Vergoossen, 6IICT</h6>
+        <p class="card-text">Op deze website kunt u meer informatie vinden over mijn gip(het elektronisch dambord). De bedoeling van mijn gip is om een dambord te maken waarbij de spelers lechten gebruiken als damstukken in plaats van echte fysieke stenen.</p>
+      </div>
+    </div>
+  </div>
+  <div class="col-sm-6">
+    <div class="card">
+      <div class="card-body">
+        <h5 class="card-title">Meer info over mijzelf</h5>
+        <p class="card-text">Mijn naam is Nick Vergoossen. Ik ben een van de leerlingen van de studierichting 6IICT. Dit jaar heb ik als eind opdracht gekregen om een elektronisch dambord te maken, en hier bij horend deze website en een blog.</p>
+      </div>
     </div>
   </div>
 </div>
