--- a/index.html
+++ b/index.html
@@ -70,6 +70,13 @@
       </div>
     </div>
   </div>
+  <div class="col-sm-6">
+    <div class="card">
+      <div class="card-body">
+        <img src="logo-mosa-rt.jpg" class="card-img">
+      </div>
+    </div>
+  </div>
 </div>
 <br>
 <br>
