--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
   <div class="col-sm-6">
     <div class="card">
       <div class="card-body">
-        <img src="logo-mosa-rt.jpg" class="card-img">
+        <img src="logo-mosa-rt.jpg" class="card-img" style="max-height: 200px; max-width: 100px; margin:auto">
       </div>
     </div>
   </div>
