--- a/index.html
+++ b/index.html
@@ -65,19 +65,13 @@
   <div class="col-sm-6">
     <div class="card">
       <div class="card-body">
+        <img src="logo-mosa-rt.jpg" class="card-img-right" style="max-height: 200px; max-width: 100px; margin: auto">
         <h5 class="card-title">Meer info over mijzelf</h5>
         <p class="card-text">Mijn naam is Nick Vergoossen. Ik ben een van de leerlingen van de studierichting 6IICT. Dit jaar heb ik als eind opdracht gekregen om een elektronisch dambord te maken, en hier bij horend deze website en een blog.</p>
       </div>
     </div>
   </div>
-  <div class="col-sm-6">
-    <div class="card">
-      <div class="card-body">
-        <img src="logo-mosa-rt.jpg" class="card-img" style="max-height: 200px; max-width: 100px; margin:auto">
-      </div>
-    </div>
-  </div>
-</div>
+
 <br>
 <br>
 
