--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
 <div class="container">
 <div class="row">
   <div class="col-sm-6">
-    <div class="card">
+    <div class="card" style="max-width: 200px;">
       <div class="card-body">
         <h5 class="card-title">Welkom op mijn website</h5>
         <h6 class="card-subtitle mb-2 text-muted">Gemaakt door Nick Vergoossen, 6IICT</h6>
@@ -63,7 +63,7 @@
     </div>
   </div>
   <div class="col-sm-6">
-    <div class="card">
+    <div class="card" style="max-width: 200px;">
       <div class="card-body">
         <h5 class="card-title">Meer info over mijzelf</h5>
         <p class="card-text">Mijn naam is Nick Vergoossen. Ik ben een van de leerlingen van de studierichting 6IICT. Dit jaar heb ik als eind opdracht gekregen om een elektronisch dambord te maken, en hier bij horend deze website en een blog.</p>
