--- a/blog.html
+++ b/blog.html
@@ -48,6 +48,55 @@
               </div>
             </div>
           </nav>
+          <br>
+          <div class="container">
+            <div class="card" style="max-height: 400px; max-width: 700px; margin:auto">
+              <h5>April</h5>
+              <p>In april ben ik begonnen met een kleine pre-presentatie voor de gip jury deze is opzicht vrij goed verlopen. Ook ben ik deze maand pas begonnen met het maken van mijn website en de blog die u nu momenteel leest.</p>
+            </div>
+          </div>
+          <br>
+          <div class="container">
+            <div class="card" style="max-height: 400px; max-width: 700px; margin:auto">
+              <h5>Maart</h5>
+              <p>Bij het begin van maart heb ik een programma geschreven die het gehele bord kan laten oplichten met het patroon van een dambord. Ook ben ik deze maand begonnen met het maken van het fysieke gedeelte van het bord deze heb ik nog voor de examens af weten te krijgen.</p>
+            </div>
+          </div>
+          <br>
+          <div class="container">
+            <div class="card" style="max-height: 400px; max-width: 700px; margin:auto">
+              <h5>Februari</h5>
+              <p>Februari ben ik begonnen met een test programma te schrijven voor het dambord. Deze was gebasseerd op een code die was geschreven in c++. Later bleek toch dat de code die ik al gedeeltelijk had geschreven niet zou werken omwille van bepaalde begrippen binnen c++ die ik nog niet begrijp.</p>
+            </div>
+          </div>
+          <br>
+          <div class="container">
+            <div class="card" style="max-height: 400px; max-width: 700px; margin:auto">
+              <h5>Januari</h5>
+              <p>In januari ben ik begonnen met het maken van een programma waarmee ik een enkele led kan aansturen inplaatst van de gehele strip. Ik heb ook gekeken naar de code van online dambord spelen zodat ik hier later misschien zelf een code mee kan maken.</p>
+            </div>
+          </div>
+          <br>
+          <div class="container">
+            <div class="card" style="max-height: 400px; max-width: 700px; margin:auto">
+              <h5>December</h5>
+              <p>In december heb ik een programma gemaakt waarmee ik de ledstrip kan aanzetten. ik heb daarna vervolgens ook een programma gemaakt waarbij ik de ledstrip kan aansturen aan de hand van mijn joystick.</p>
+            </div>
+          </div>
+          <br>
+          <div class="container">
+            <div class="card" style="max-height: 400px; max-width: 700px; margin:auto">
+              <h5>November</h5>
+              <p>in November heb ik informatie gekregen over hoe ik de blog moest gaan maken. Ook heb ik een programma geschreven om de joystick mee te kunnen testen. Ik heb deze maand ook meer opzoek werk vericht over de andere componenten.</p>
+            </div>
+          </div>
+          <br>
+          <div class="container">
+            <div class="card" style="max-height: 400px; max-width: 700px; margin:auto">
+              <h5>Oktober</h5>
+              <p>In oktober zijn we begonnen met onze gip. In deze maand heb ik vooral opzoek werk gedaan over de componenten die ik zal moeten gebruiken bij mijn gip. Maar ik heb ook een planning gemaakt aan de hand van het programma gantproject.</p>
+            </div>
+          </div>
     </body>
 </html>
 
