--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
 <div class="container">
 <div class="row">
   <div class="col-sm-6">
-    <div class="card" style="max-width: 200px;">
+    <div class="card" style="max-height: 300px; max-width: 450px;">
       <div class="card-body">
         <h5 class="card-title">Welkom op mijn website</h5>
         <h6 class="card-subtitle mb-2 text-muted">Gemaakt door Nick Vergoossen, 6IICT</h6>
@@ -63,58 +63,54 @@
     </div>
   </div>
   <div class="col-sm-6">
-    <div class="card" style="max-width: 200px;">
+    <div class="card" style="height: 210px; max-width: 450px;">
       <div class="card-body">
         <h5 class="card-title">Meer info over mijzelf</h5>
         <p class="card-text">Mijn naam is Nick Vergoossen. Ik ben een van de leerlingen van de studierichting 6IICT. Dit jaar heb ik als eind opdracht gekregen om een elektronisch dambord te maken, en hier bij horend deze website en een blog.</p>
       </div>
     </div>
   </div>
-  <div class="col-sm-6">
-    <img src="logo-mosa-rt.jpg" style="max-height: 200px; max-width: 100px;">
-  </div>
-<br>
-<br>
-
-<div class="container" >
-  <div id="carouselExampleCaptions" class="carousel slide" data-bs-ride="carousel" style="max-height: 600px;">
-    <div class="carousel-indicators">
-      <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
-      <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="1" aria-label="Slide 2"></button>
-      <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="2" aria-label="Slide 3"></button>
+  <br>
+  <br>
+  <div class="container" >
+    <div id="carouselExampleCaptions" class="carousel slide" data-bs-ride="carousel" style="max-height: 600px;">
+      <div class="carousel-indicators">
+        <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
+        <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="1" aria-label="Slide 2"></button>
+        <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="2" aria-label="Slide 3"></button>
+      </div>
+      <div class="carousel-inner.item">
+        <div class="carousel-item active">
+          <img src="dambord_blue.jpg" class="d-block w-100" style="height: 600px; max-width:600px; margin:auto" alt="...">
+          <div class="carousel-caption d-none d-md-block">
+            <h5>blauw dambord</h5>
+            <p>test programma of alle leds werken.</p>
+          </div>
+        </div>
+        <div class="carousel-item">
+          <img src="test_dambord.jpg" class="d-block w-100" style="height: 600px; max-width:600px; margin:auto" alt="...">
+          <div class="carousel-caption d-none d-md-block">
+            <h5>test showboard</h5>
+            <p>test voor het laten zien van het bord.</p>
+          </div>
+        </div>
+        <div class="carousel-item">
+          <img src="onderdelen.jpg" class="d-block w-100" style="height: 600px; max-width:600px; margin:auto" alt="...">
+          <div class="carousel-caption d-none d-md-block">
+            <h5>onderdelen project</h5>
+            <p>een aantal componenten gebruikt bij het project.</p>
+          </div>
+        </div>
+      </div>
+      <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide="prev" style = "height:450px; max-width:300px;">
+        <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+        <span class="visually-hidden">Previous</span>
+      </button>
+      <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide="next" style="height: 450px; max-width:300px;">
+        <span class="carousel-control-next-icon" aria-hidden="true"></span>
+        <span class="visually-hidden">Next</span>
+      </button>
     </div>
-    <div class="carousel-inner.item">
-      <div class="carousel-item active">
-        <img src="dambord_blue.jpg" class="d-block w-100" style="height: 600px; max-width:600px; margin:auto" alt="...">
-        <div class="carousel-caption d-none d-md-block">
-          <h5>blauw dambord</h5>
-          <p>test programma of alle leds werken.</p>
-        </div>
-      </div>
-      <div class="carousel-item">
-        <img src="test_dambord.jpg" class="d-block w-100" style="height: 600px; max-width:600px; margin:auto" alt="...">
-        <div class="carousel-caption d-none d-md-block">
-          <h5>test showboard</h5>
-          <p>test voor het laten zien van het bord.</p>
-        </div>
-      </div>
-      <div class="carousel-item">
-        <img src="onderdelen.jpg" class="d-block w-100" style="height: 600px; max-width:600px; margin:auto" alt="...">
-        <div class="carousel-caption d-none d-md-block">
-          <h5>onderdelen project</h5>
-          <p>een aantal componenten gebruikt bij het project.</p>
-        </div>
-      </div>
-    </div>
-    <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide="prev" style = "height:450px; max-width:300px;">
-      <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-      <span class="visually-hidden">Previous</span>
-    </button>
-    <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide="next" style="height: 450px; max-width:300px;">
-      <span class="carousel-control-next-icon" aria-hidden="true"></span>
-      <span class="visually-hidden">Next</span>
-    </button>
-  </div>
-          
-    </body>
-</html>
+            
+      </body>
+  </html>
