--- a/programma's.html
+++ b/programma's.html
@@ -316,6 +316,9 @@
                     <h5 class="text-uppercase">logo school</h5>
           
                     <ul class="list-unstyled mb-0">
+                      <li>
+                        <a href="https://www.mosa-rt.be/home" class="text_white">website_school</a>
+                      </li>
                       <img src="logo-mosa-rt.jpg" style="max-height: 200px; max-width: 100px;">
                     </ul>
                   </div>
