update to navbar

--- a/blog.html
+++ b/blog.html
@@ -32,7 +32,7 @@
                     </a>
                     <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
                       <li><a class="dropdown-item" href="componenten.html">componenten</a></li>
-                      <li><a class="dropdown-item" href="#">Another action</a></li>
+                      <li><a class="dropdown-item" href="elektrische schema's.html">Elektrische schema's</a></li>
                       <li><hr class="dropdown-divider"></li>
                       <li><a class="dropdown-item" href="school.html">info school</a></li>
                     </ul>
