update new image to elektrische schema's

--- a/elektrische schema's.html
+++ b/elektrische schema's.html
@@ -50,6 +50,7 @@
           </div>
           <br>
           <br>
+          <img src="elektrisch schema.png" class="d-block w-100" style="height: 800px; max-width:900px; margin:auto" alt="...">
 
           <br>
           <br>
