--- a/componenten.html
+++ b/componenten.html
@@ -60,14 +60,14 @@
               </div>
               <div class="carousel-inner.item">
                 <div class="carousel-item active">
-                  <img src="20220503_092001.jpg" class="d-block w-100" style="height: 600px; max-width:600px; margin:auto" alt="...">
+                  <img src="ledstrip.jpg" class="d-block w-100" style="height: 600px; max-width:600px; margin:auto" alt="...">
                   <div class="carousel-caption d-none d-md-block">
                     <h5>ledstrip</h5>
                     <p>dit is de ws2812 die gebruikt is bij dit project.</p>
                   </div>
                 </div>
                 <div class="carousel-item">
-                  <img src="20220503_092757.jpg" class="d-block w-100" style="height: 600px; max-width:600px; margin:auto" alt="...">
+                  <img src="joystick.jpg" class="d-block w-100" style="height: 600px; max-width:600px; margin:auto" alt="...">
                   <div class="carousel-caption d-none d-md-block">
                     <h5>Joystick</h5>
                     <p>Dit is een van de joysticks die is gebruikt tijdens dit project.</p>
