--- a/blog.html
+++ b/blog.html
@@ -51,6 +51,13 @@
           <br>
           <div class="container">
             <div class="card" style="max-height: 400px; max-width: 700px; margin:auto">
+                <h5>Mei</h5>
+                <p>In maart heb ik met behulp van meneer Clijsters de code om het bord te laten. Deze toepassing is korter maar voor mij persoonlijk minder duidelijk omwille van een verschillende manier van programmeren. Dit wilt niet zeggen at ik dit niet ga gebruiken ik ga deze voor mij zelf en andere verduidelijke doormiddel van commentaar. Ook heb ik deze maand een programma geschreven voor het bewegen van stukken dit programma werkt tot nu toe niet maar hier word nu aan gewerkt.</p>
+            </div>
+          </div>
+          <br>
+          <div class="container">
+            <div class="card" style="max-height: 400px; max-width: 700px; margin:auto">
               <h5>April</h5>
               <p>In april ben ik begonnen met een kleine pre-presentatie voor de gip jury deze is opzicht vrij goed verlopen. Ook ben ik deze maand pas begonnen met het maken van mijn website en de blog die u nu momenteel leest.</p>
             </div>
