fix remove yoda

--- a/school.html
+++ b/school.html
@@ -139,7 +139,7 @@
           
                     <ul class="list-unstyled mb-0">
                       <li>
-                        <a href="https://www.youtube.com/watch?v=Zhlu5MmrzHA" class="text-white">core setting</a>
+                        <a href="" class="text-white">core setting</a>
                       </li>
                     </ul>
                   </div>
