--- a/blog.html
+++ b/blog.html
@@ -28,11 +28,12 @@
                   </li>
                   <li class="nav-item dropdown">
                     <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
-                      Dropdown
+                      More
                     </a>
                     <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
                       <li><a class="dropdown-item" href="componenten.html">componenten</a></li>
                       <li><a class="dropdown-item" href="elektrische schema's.html">Elektrische schema's</a></li>
+                      <li><a class="dropdown-item" href="nederlands.html">Nederlands</a></li>
                       <li><hr class="dropdown-divider"></li>
                       <li><a class="dropdown-item" href="school.html">info school</a></li>
                     </ul>
