--- a/school.html
+++ b/school.html
@@ -33,6 +33,7 @@
                     <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
                       <li><a class="dropdown-item" href="componenten.html">componenten</a></li>
                       <li><a class="dropdown-item" href="elektrische schema's.html">Elektrische schema's</a></li>
+                      <li><a class="dropdown-item" href="nederlands.html">Nederlands</a></li>
                       <li><hr class="dropdown-divider"></li>
                       <li><a class="dropdown-item" href="school.html">info school</a></li>
                     </ul>
