gone with yt vids

--- a/index.html
+++ b/index.html
@@ -187,7 +187,7 @@
     
               <ul class="list-unstyled mb-0">
                 <li>
-                  <a href="https://www.youtube.com/watch?v=dQw4w9WgXcQ" class="text-white">cookies</a>
+                  <a href="" class="text-white">cookies</a>
                 </li>
               </ul>
             </div>
@@ -197,7 +197,7 @@
     
               <ul class="list-unstyled mb-0">
                 <li>
-                  <a href="https://www.youtube.com/watch?v=eaEMSKzqGAg" class="text-white">algemeen</a>
+                  <a href="" class="text-white">algemeen</a>
                 </li>
               </ul>
             </div>
